--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -27,9 +27,9 @@ body {
 
 /* Tipografia */
 h1 {
-  font-size: 2rem;
-  margin-bottom: var(--spacing-lg);
-  color: var(--text-primary);
+  font-size: var(--font-size-title);
+  color: #dddddd;
+  margin-bottom: 32px;
 }
 
 h2 {
