--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
   color: var(--text-primary);
   line-height: 1.5;
   font-size: 16px;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 /* Layout */
