--- a/src/pages/EventView.css
+++ b/src/pages/EventView.css
@@ -13,9 +13,9 @@
 
 .event-cover {
   width: 100%;
-  height: 400px;
-  border-radius: 16px;
+  height: 250px;
   overflow: hidden;
+  position: relative;
   margin-bottom: 24px;
 }
 
@@ -23,6 +23,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
+}
+
+.event-info {
+  padding: 0 24px;
+  text-align: left;
 }
 
 .event-info h1 {
@@ -70,15 +76,17 @@
   transform: translateY(-4px);
 }
 
-.product-image {
+.product-card .product-image {
+  width: 100%;
   height: 200px;
   overflow: hidden;
 }
 
-.product-image img {
+.product-card .product-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .product-info {
